// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage componente con la imagen del producto  1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="title"
    className="productImg undefined "
    src="./coffee-mug.png"
  />
</div>
`;

exports[`ProductImage mostrar el compononte con la imagen 1`] = `
<img
  alt="title"
  className="productImg undefined "
  src="Custom product"
/>
`;
